Anotation based configuration for admins have been added