@@ -6,6 +6,7 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import static com.group15.AutomatedHydroponicsSystem.User.Permission.*;
 
@@ -43,8 +44,8 @@ public enum Role {
     public List<SimpleGrantedAuthority> getAuthorities(){
         var authorities = getPermissions()
                 .stream()
-                .map(permission -> new SimpleGrantedAuthority(permission.name()))
-                .toList();
+                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
+                .collect(Collectors.toList());
         authorities.add(new SimpleGrantedAuthority("Role_" + this.name()));
         return authorities;
     }
